<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fhc.robotvoice.MainActivity">



        <TextView
            android:id="@+id/head"
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            android:text="@string/tip1"/>

        <TextView
            android:id="@+id/tvTips"
            android:layout_below="@id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/tip2"/>

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_below="@id/tvTips"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:text="@string/tip3"/>

        <TextView
            android:id="@+id/b"
            android:layout_below="@id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="@string/tip4"/>

        <TextView
            android:id="@+id/c"
            android:layout_below="@id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/tip5"/>

</RelativeLayout>
